--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "convex": "^1.27.1",
     "lucide-react": "^0.544.0",
     "next": "15.5.3",
+    "openai": "^5.23.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "tailwind-merge": "^3.3.1"
